<resources>
    <string name="app_name">TimTour</string>
    <string name="activity_restaurants">Restaurants</string>
    <string name="activity_museums">Museums</string>
    <string name="activity_parks">Parks</string>
    <string name="activity_places_of_interest">Places of interest</string>
    <string name="amphora_name">Amphora</string>
    <string name="amphora_program">10:00 – 00:00</string>
    <string name="amphora_address">Str. Hector no. 4</string>
    <string name="amphora_rating">4.6</string>
    <string name="biofresh_name">Biofresh</string>
    <string name="biofresh_program">10:00 – 22:00</string>
    <string name="biofresh_address">Str. Francesco Griselini no. 2</string>
    <string name="biofresh_rating">4.7</string>
    <string name="casa_bunicii_name">Casa Bunicii</string>
    <string name="casa_bunicii_program">12:00 – 00:00</string>
    <string name="casa_bunicii_address">Str. Virgil Onitiu no. 3</string>
    <string name="casa_bunicii_rating">4.3</string>
    <string name="casa_cu_flori_name">Casa cu Flori</string>
    <string name="casa_cu_flori_program">8:00 – 00:00</string>
    <string name="casa_cu_flori_address">Str. Alba Iulia no. 1</string>
    <string name="casa_cu_flori_rating">4.0</string>
    <string name="caruso_name">Caruso</string>
    <string name="caruso_program">12:00 - 00:00</string>
    <string name="caruso_address">Str. Enrico Carusso no. 2</string>
    <string name="caruso_rating">4.7</string>
    <string name="jarvis_name">Jarvis</string>
    <string name="jarvis_program">17:00 – 00:00</string>
    <string name="jarvis_address">Str. General Eremia Grigorescu no. 14</string>
    <string name="jarvis_rating">4.4</string>
    <string name="little_hanoi_name">Little Hanoi</string>
    <string name="little_hanoi_program">10:00 – 22:00</string>
    <string name="little_hanoi_address">Str. Johann Wolfgang von Goethe no. 2</string>
    <string name="little_hanoi_rating">4.6</string>
    <string name="locanda_del_corso_name">Locanda del Corso</string>
    <string name="locanda_del_corso_program">11:00 – 00:00</string>
    <string name="locanda_del_corso_address">Str. Marasesti no. 10</string>
    <string name="locanda_del_corso_rating">4.6</string>
    <string name="misto_name">Misto</string>
    <string name="misto_program">10:00 – 23:00</string>
    <string name="misto_address">Str. Eugeniu de Savoya no. 11</string>
    <string name="misto_rating">4.5</string>
    <string name="sky_name">Sky Restaurant</string>
    <string name="sky_program">10:00 – 23:45</string>
    <string name="sky_address">Str. Coriolan Brediceanu no. 10</string>
    <string name="sky_rating">4.6</string>
    <string name="art_museum_name">Art Museum</string>
    <string name="art_museum_program">10:00 – 18:00</string>
    <string name="art_museum_address">Piața Unirii no. 1</string>
    <string name="banat_museum_name">Banat Village Museum</string>
    <string name="banat_museum_program">10:00 – 18:00</string>
    <string name="banat_museum_address">Str. Avram Imbroane no. 1</string>
    <string name="cathedral_museum_name">Museum of the Metropolitan Cathedral</string>
    <string name="cathedral_museum_program">10:00 – 17:00</string>
    <string name="cathedral_museum_address">Catedrala Mitropolitana Ortodoxa Română, Piaţa Victoriei</string>
    <string name="comunist_consumer_museum_name">Communist Consumer Museum</string>
    <string name="comunist_consumer_museum_program">10:00 – 23:00</string>
    <string name="comunist_consumer_museum_address">Str. Arhitect Laszlo Szekely no. 1</string>
    <string name="kindlein_museum_name">Kindlein Museum</string>
    <string name="kindlein_museum_program">10:00 – 18:00</string>
    <string name="kindlein_museum_address">Str. Vasile Alecsandri, no. 8</string>
    <string name="central_park_name">Central Park</string>
    <string name="central_park_address">Splaiul Nicolae Titulescu no. 1</string>
    <string name="botanic_park_name">Botanic Park</string>
    <string name="botanic_park_address">Calea Alexandru Ioan Cuza</string>
    <string name="roses_park_name">Roses Park</string>
    <string name="roses_park_address">Strada Michelangelo - Strada 20 Decembrie 1989</string>
    <string name="childrens_park_name">Children\'s Park</string>
    <string name="childrens_park_address">Bulevardul Constantin Diaconovici Loga no. 43</string>
    <string name="justice_park_name">Justice Park</string>
    <string name="justice_park_address">Bulevardul Constantin Diaconovici Loga no. 2</string>
    <string name="queen_mary_park_name">Queen Mary Park</string>
    <string name="queen_mary_park_address">Splaiul Nistrului no. 2</string>
    <string name="national_opera_name">National Opera Timisoara</string>
    <string name="national_opera_address">Piata Victoriei</string>
    <string name="cathedral_name">The Metropolitan Cathedral of Timisoara</string>
    <string name="cathedral_address">Bulevardul Regele Ferdinand I</string>
    <string name="opera_square_name">Opera Square in Timisoara</string>
    <string name="opera_square_address">Piata Victoriei</string>
    <string name="union_square_name">Union square</string>
    <string name="union_square_address">Piata Unirii</string>
    <string name="freedom_square_name">Freedom Square</string>
    <string name="freedom_square_address">Piata Libertatii</string>
    <string name="square_700_name">700 Square</string>
    <string name="square_700_address">Str. Coriolan Brediceanu no. 6</string>
    <string name="zoo_name">Zoo</string>
    <string name="zoo_address">Str. Avram Imbroane no. 90</string>
    <string name="bega_name">Bega River</string>
    <string name="bega_address">In the middle of the town</string>
    <string name="green_forrest_name">Green Forest</string>
    <string name="green_forrest_address">Near the Zoo</string>
</resources>
