<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/items_background"
    tools:context="com.example.webdevion.timtour.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/items_background">

            <TextView
                android:id="@+id/restaurants_list"
                style="@style/category_list"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/activity_restaurants"/>

        </FrameLayout>

        <LinearLayout
            style="@style/category_separator"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/items_background">

            <TextView
                android:id="@+id/museums_list"
                style="@style/category_list"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/activity_museums"/>

        </FrameLayout>

        <LinearLayout
            style="@style/category_separator"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/items_background">

            <TextView
                android:id="@+id/parks_list"
                style="@style/category_list"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/activity_parks"/>

        </FrameLayout>

        <LinearLayout
            style="@style/category_separator"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/items_background">

            <TextView
                android:id="@+id/places_list"
                style="@style/category_list"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/activity_places_of_interest"/>

        </FrameLayout>

        <LinearLayout
            style="@style/category_separator"/>

    </LinearLayout>

</ScrollView>
